--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,41 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.simbolon.aboutme">
-
     <!-- Tambahkan izin akses ke penyimpanan eksternal -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application
 
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/myfoto"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Aboutme"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".KonfirmasiRegistrasi"
+            android:exported="false" />
         <!-- Mendefinisikan aktivitas login sebagai activity utama -->
         <activity
             android:name=".login"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Mendefinisikan activity untuk registrasi dan MainActivity -->
+        </activity> <!-- Mendefinisikan activity untuk registrasi dan MainActivity -->
         <activity
             android:name=".registrasi"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" />
-
-        <!-- Mendefinisikan metadata untuk font yang dimuat sebelumnya -->
+            android:exported="true" /> <!-- Mendefinisikan metadata untuk font yang dimuat sebelumnya -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-
     </application>
+
 </manifest>
